<resources>
    <string name="app_name">Calculadora</string>

    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>

    <string name="mais">+</string>
    <string name="menos">-</string>
    <string name="vezes">x</string>
    <string name="porcento">%</string>
    <string name="igual">=</string>
    <string name="dividir">÷</string>
    <string name="point">.</string>
</resources>