<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cor_fundo_calc"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:onClick="um"
        android:text="@string/btn1"
        android:textColor="@color/black"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:onClick="dois"
        android:text="@string/btn2"
        android:textColor="@color/black"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="2dp"
        android:onClick="tres"
        android:text="@string/btn3"
        android:textColor="@color/black"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="2dp"
        android:onClick="quatro"
        android:text="@string/btn4"
        android:textColor="@color/black"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="2dp"
        android:onClick="cinco"
        android:text="@string/btn5"
        android:textColor="@color/black"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="2dp"
        android:onClick="seis"
        android:text="@string/btn6"
        android:textColor="@color/black"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="2dp"
        android:onClick="sete"
        android:text="@string/btn7"
        android:textColor="@color/black"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="2dp"
        android:onClick="oito"
        android:text="@string/btn8"
        android:textColor="@color/black"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="2dp"
        android:onClick="nove"
        android:text="@string/btn9"
        android:textColor="@color/black"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:onClick="menos"
        android:text="@string/menos"
        android:textColor="@color/black"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:onClick="mais"
        android:text="@string/mais"
        android:textColor="@color/black"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button10" />

    <Button
        android:id="@+id/button11"
        android:layout_width="90dp"
        android:layout_height="190dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="2dp"
        android:onClick="igual"
        android:text="@string/igual"
        android:textColor="@color/black"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/btn_porcent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:onClick="porcent"
        android:text="@string/porcento"
        android:textColor="@color/black"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="2dp"
        android:background="?attr/actionModeCloseDrawable"
        android:backgroundTint="@color/black"
        android:drawableTint="@color/black"
        android:foreground="?attr/actionModeCloseDrawable"
        android:foregroundTint="@color/black"
        android:gravity="center"
        android:onClick="ddelete"
        android:textColor="@color/black"
        android:textSize="55sp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="36dp"
        android:onClick="zero"
        android:text="@string/btn0"
        android:textColor="@color/black"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button12" />

    <Button
        android:id="@+id/button_x"
        android:layout_width="wrap_content"
        android:layout_height="93dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:onClick="vezes"
        android:text="@string/vezes"
        android:textColor="@color/black"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button14" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="36dp"
        android:cursorVisible="false"
        android:elevation="10sp"
        android:gravity="center"
        android:onClick="pont"
        android:text="@string/point"
        android:textColor="@color/black"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button0" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="36dp"
        android:onClick="dividir"
        android:text="@string/dividir"
        android:textColor="@color/black"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        android:layout_marginTop="8dp"
        android:bufferType="editable"
        android:editable="false"
        android:ems="10"
        android:foregroundGravity="center"
        android:foregroundTint="@color/white"
        android:freezesText="false"
        android:gravity="center"
        android:inputType="number"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textIsSelectable="false"
        android:textSize="60sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:backgroundTint="@color/cor_fundo_calc"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text_Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="110dp"
        android:textColor="@color/red"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="78dp"
        android:layout_height="121dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="10dp"
        android:background="#000000"
        android:backgroundTint="#7700C3FF"
        android:clickable="true"
        android:foreground="@android:drawable/ic_menu_delete"
        android:foregroundTint="#020202"
        android:onClick="apagarTd"
        android:tint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_porcent" />

</androidx.constraintlayout.widget.ConstraintLayout>